# Claims-denial-leakage-miner

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: run_benchmark.py
benchmark/results/: benchmark_20260715T223213Z.json
config/: settings.yaml
docs/adr/: 0001-duckdb-over-postgres.md  0002-rules-over-ml.md
powerbi/: measures.dax  semantic-model.md
powerbi/screenshots/: README.md
scripts/: load_postgres.py
src/claims_miner/: cli.py  config.py  logging_conf.py
src/claims_miner/detection/: rules.py  scorer.py
src/claims_miner/generator/: claims_factory.py  denial_engine.py  reference_data.py
src/claims_miner/pipeline/: ingest.py  runner.py
src/claims_miner/pipeline/models/: fct_denials.sql  fct_leakage.sql  mart_rcm_kpis.sql  stg_claims.sql  stg_remits.sql
tests/: conftest.py  test_cli.py  test_config.py  test_detection.py  test_generator.py  test_logging.py  test_pipeline.py
