[project]
name = "claims-miner"
version = "0.1.0"
description = "Mines 837/835-shaped claims data for preventable denials and quantifies revenue leakage by CARC code, payer, and department"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Manoj Kumar Chunduru", email = "hello.manojchunduru@gmail.com" }]
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
claims-miner = "claims_miner.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"claims_miner.pipeline" = ["models/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
